fix: resolve remaining SonarQube code smells across all modules
- Add private constructors to utility classes (S1118)
- Remove commented-out code and transient modifier (S125, S3077)
- Override equals/hashCode in CustomJwtAuthenticationToken (S2160)
- Replace collect(Collectors.toList()) with toList() (S6204)
- Convert HashMap to EnumMap for enum keys (S1640)
- Use @Builder for AvatarSetting, reduce method params (S107)
- Use parameterized logging in event listeners (S3457)
- Improve test assertions: chain, containsEntry, hasSameHashCodeAs
- Refactor lambdas for single throwing invocation (S5778)
- Remove unnecessary eq() wrappers and lambda parentheses (S6068, S1611)
- Add assertions to integration tests (S2699)

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>